# depth_map_optimizer

./: .gitignore  CMakeLists.txt  package.xml
include/depth_optimizer/: DeltaDepthCostFunction.hpp  DepthCostFunction.hpp  DepthMapOptimizationConfig.hpp  DepthMapOptimizationProblem.h  DepthMapOptimizationProblem.hpp  DepthOptimizerNode.hpp  LossFunctionDescription.hpp  RobustLinearRegression.h  RobustLinearRegression.hpp  io.hpp
launch/: run_depth_optimizer.py
msg/: ObjectData.msg
src/: DepthMapOptimizationProblem.cpp  DepthOptimizerNode.cpp  RobustLinearRegression.cpp  depth_optimizer.cpp  io.cpp
